src/influxdb.yml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: ft_services
spec:
  ports:
  - port: 8086
    targetPort: 8086
    protocol: TCP
    name: influxdb
  selector:
    app: ft_services
    tier: influxdb
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels:
    app: ft_services
spec:
  selector:
    matchLabels:
      app: ft_services
      tier: influxdb
  replicas: 1
  template:
    metadata:
      labels:
        app: ft_services
        tier: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 8086
          hostPort: 8086
          name: influxdb
        volumeMounts:
        - name: influxdb-storage
          mountPath: /var/lib/influxdb
      restartPolicy: Always
      volumes:
      - name: influxdb-storage
        persistentVolumeClaim:
          claimName: influxdb-pvc
