src/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: ft_services
spec:
  ports:
  - port: 3306
    protocol: TCP
    name: sql
  selector:
    app: ft_services
    tier: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: ft_services
spec:
  selector:
    matchLabels:
      app: ft_services
      tier: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: ft_services
        tier: mysql
    spec:
      containers:
      - name: mysql
        image: mysql-image
        imagePullPolicy: Never
        ports:
        - containerPort: 3306
          hostPort: 3306
          name: sql
        volumeMounts:
        - name: mysql-storage
          mountPath: /app/mysql
        - name: mysql-config
          mountPath: /etc/mysql/my.cnf
          subPath: my.cnf
      restartPolicy: Always
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
      - name: mysql-config
        configMap:
          name: mysql-config
