src/nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: ft_services
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: ft_services
    tier: nginx
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: ft_services
spec:
  selector:
    matchLabels:
      app: ft_services
      tier: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: ft_services
        tier: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx-image
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: tls-key
          mountPath: etc/nginx/tls.crt
          subPath: tls.crt
        - name: tls-key
          mountPath: etc/nginx/tls.key
          subPath: tls.key
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: tls-key
        secret:
          secretName: tls-key
