src/telegraf.yml
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  labels:
    app: ft_services
spec:
  ports:
  - port: 3333
    targetPort: 3333
  selector:
    app: ft_services
    tier: telegraf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  labels:
    app: ft_services
spec:
  selector:
    matchLabels:
      app: ft_services
      tier: telegraf
  replicas: 1
  template:
    metadata:
      labels:
        app: ft_services
        tier: telegraf
    spec:
      containers:
      - name: telegraf
        image: telegraf:alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3333
        volumeMounts:
        - name: dockersock
          mountPath: "/var/run/docker.sock"
        - name: telegraf-config
          mountPath: /etc/telegraf/telegraf.conf
          subPath: telegraf.conf
      restartPolicy: Always
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
      - name: telegraf-config
        configMap:
          name: telegraf-config
