src/wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: word-press
  labels:
    app: ft_services
spec:
  ports:
  - port: 80
    protocol: TCP
    name: wp
  selector:
    app: ft_services
    tier: word-press
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-press
  labels:
    app: ft_services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ft_services
      tier: word-press
  template:
    metadata:
      labels:
        app: ft_services
        tier: word-press
    spec:
      containers:
      - name: wordpress
        image: wordpress-image
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          hostPort: 5050
          name: wp
      restartPolicy: Always
